[package]
name = "project-hbj-hook"
version = "0.1.0"
edition = "2024"

[dependencies]
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
libc = "0.2.177"
nix = { version = "0.30.1", features = ["ptrace", "uio", "signal"] }
goblin = "0.10.3"
memmap2 = "0.9.9"
anyhow = "1.0.100"
ouroboros = "0.18.5"
